# manta-buckets-mdapi

./: .gitignore  .gitmodules  Cargo.toml  Jenkinsfile  Makefile  README.md  config.toml.dist
.cargo/: config
boot/: configure.sh  setup.sh
boray/: Cargo.toml  Cargo.toml.autogen
boray-bin/: Cargo.toml
boray-bin/src/: config.rs  object.rs
boray-bin/src/object/: list.rs
boray/src/: bucket.rs  error.rs  gc.rs  lib.rs  main.rs  metrics.rs  object.rs  sql.rs
boray/src/bucket/: create.rs  delete.rs  get.rs  list.rs
boray/src/gc/: delete.rs  get.rs
boray/src/object/: create.rs  delete.rs  get.rs  list.rs  update.rs
boray/tests/: rpc_handlers.rs
buckets-mdapi/: Cargo.toml
buckets-mdapi/src/: bucket.rs  conditional.rs  discovery.rs  error.rs  gc.rs  lib.rs  main.rs  metrics.rs  object.rs  opts.rs  precondition.rs  sql.rs
buckets-mdapi/src/bucket/: create.rs  delete.rs  get.rs  list.rs
buckets-mdapi/src/gc/: delete.rs  get.rs
buckets-mdapi/src/object/: batch_update.rs  create.rs  delete.rs  get.rs  list.rs  update.rs
buckets-mdapi/tests/: rpc_handlers.rs
migrations/: MIGRATIONS.md
migrations/public/: 0000-0000-migration-setup.sql  0001-0000-garbage-collection-setup.sql  0001-0001-helper-functions.sql  0001-0002-limit-get-garbage-function-results.sql  0001-0004-garbage-batch-id-primary-key.sql
migrations/public/downgrade/: 0000-0000-migration-setup.downgrade.sql  0001-0000-garbage-collection-setup.downgrade.sql
migrations/vnode/: 0000-0000-migration-setup.in
sapi_manifests/boray/: manifest.json  template
sapi_manifests/buckets-mdapi/: manifest.json  template
sapi_manifests/registrar/: manifest.json  template.in
schema-manager/: Cargo.toml
schema-manager/src/: main.rs
schema_templates/: admin.in  db.in  schema.in
smf/manifests/: boray.xml.in  buckets-mdapi-setup.xml  buckets-mdapi.xml  buckets-mdapi.xml.in
smf/method/: buckets-mdapi-setup
src/: bucket.rs  config.rs  error.rs  lib.rs  main.rs  metrics.rs  object.rs  opts.rs  sql.rs
src/bucket/: create.rs  delete.rs  get.rs  list.rs
src/gc/: delete.rs  get.rs
src/object/: create.rs  delete.rs  get.rs  list.rs  update.rs
tests/: rpc_handlers.rs
tools/postgres/: create-ephemeral-db.sh  ephemeral-db-schema.sql
utils/: Cargo.toml
utils/src/: config.rs  lib.rs  schema.rs
utils/src/schema/: migrations.rs
