[package]
name = "buckets-demo"
version = "0.1.0"
authors = ["Kelly McLaughlin <kelly.mclaughlin@joyent.com>"]

[dependencies]

base64 = "0.10.0"
chrono = { version = "0.4.6", features = ["serde"] }
clap = "2.32"
md5 = "0.5.0"
postgres = {version = "0.15.2", features=["with-chrono", "with-serde_json", "with-uuid"]}
r2d2 = "0.8.2"
r2d2_postgres = "0.14.0"
rust_fast = { git = "https://github.com/joyent/rust-fast", branch = "master" }
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.31"
slog = "2.4.1"
slog-bunyan = "2.1.0"
tokio = "0.1.8"
uuid = { version = "0.5", features = ["serde", "v4"] }
