[package]
name = "buckets-demo"
version = "0.1.0"
authors = ["Kelly McLaughlin <kelly.mclaughlin@joyent.com>"]

[dependencies]

base64 = "0.10.1"
chrono = { version = "0.4.6", features = ["serde"] }
clap = "2.32"
md5 = "0.5.0"
postgres = {version = "0.15.2", features=["with-chrono", "with-serde_json", "with-uuid"]}
r2d2 = "0.8.3"
r2d2_postgres = "0.14.0"
rust_fast = { git = "https://github.com/joyent/rust-fast", branch = "master" }
serde = "1.0.84"
serde_derive = "1.0.84"
serde_json = "1.0.36"
slog = { version = "2.4.1", features = [ "max_level_trace" ] }
slog-bunyan = { git = "https://github.com/kellymclaughlin/bunyan", branch = "build-on-smartos" }
tokio = "0.1.14"
uuid = { version = "0.5", features = ["serde", "v4"] }

[patch.crates-io]
rand = { git = 'https://github.com/rust-random/rand' }
