[package]
name = "buckets-mdapi"
version = "0.2.0"
authors = ["Kelly McLaughlin <kelly.mclaughlin@joyent.com>",
           "Jon Anderson <jon.anderson@joyent.com"]
edition = "2018"

[dependencies]
base64 = "0.10.1"
chrono = { version = "0.4.6", features = ["serde"] }
clap = "2.32"
gethostname = "0.2.1"
hyper = {version = "0.12.25"}
md5 = "0.5.0"
postgres = {version = "0.16.0-rc.1", features=["with-chrono-0_4", "with-serde_json-1", "with-uuid-0_7"]}
prometheus = "0.5.0"
cueball = "0.3.2"
cueball-manatee-primary-resolver = "0.3.0"
cueball-postgres-connection = "0.3.0"
rust_fast = { git = "https://github.com/joyent/rust-fast", tag = "v0.2.0" }
serde = "1.0.84"
serde_derive = "1.0.84"
serde_json = "1.0.40"
slog = { version = "2.4.1", features = [ "max_level_trace" ] }
slog-bunyan = { git = "https://github.com/slog-rs/bunyan" }
tokio = "0.1.14"
tokio-postgres = "0.4.0-rc.2"
toml = "0.5"
rand = { git = 'https://github.com/rust-random/rand' }
unicode-normalization = "=0.1.5"
utils = { path = "../utils" }
uuid = { version = "0.7", features = ["serde", "v4"] }

[dev-dependencies]
cueball-static-resolver = "0.3.0"
quickcheck = "0.8.5"
quickcheck_helpers = { git = "https://github.com/joyent/rust-quickcheck-helpers" }
slog-term = "2.4.0"
url = "1.7.2"
