[package]
name = "schema-manager"
version = "0.2.0"
authors = ["Kelly McLaughlin <kelly.mclaughlin@joyent.com>",
           "bowrocker <jon.anderson@joyent.com>"]
edition = "2018"

[dependencies]
clap = "2.32"
cmd_lib = "0.7.8"
cueball = "0.3.4"
cueball-manatee-primary-resolver = "0.3.0"
cueball-postgres-connection = "0.3.0"
cueball-dns-resolver = "0.3.0"
cueball-tcp-stream-connection = "0.3.0"
dotenv = "0.9.0"
fast-rpc = "0.3.0"
sapi = { git = "https://github.com/joyent/rust-triton-clients", tag = "v0.2.0" }
slog = { version = "2.4.1", features = [ "max_level_trace" ] }
slog-stdlog = "3"
slog-term = "2.4.0"
serde = "1.0"
serde_json = "1.0"
toml = "0.5"
utils = { path = "../utils" }
