[package]
name = "schema-manager"
version = "0.2.0"
authors = ["Kelly McLaughlin <kelly.mclaughlin@joyent.com>",
           "bowrocker <jon.anderson@joyent.com>"]
edition = "2018"

[dependencies]
clap = "2.32"
cmd_lib = "0.7.8"
cueball = { git = "https://github.com/joyent/rust-cueball", branch = "MANTA-5256" }
cueball-manatee-primary-resolver = { git = "https://github.com/joyent/rust-cueball", branch = "MANTA-5256" }
cueball-postgres-connection = { git = "https://github.com/joyent/rust-cueball", branch = "MANTA-5256" }
cueball-dns-resolver = { git = "https://github.com/joyent/rust-cueball", branch = "MANTA-5256" }
cueball-tcp-stream-connection = { git = "https://github.com/joyent/rust-cueball", branch = "MANTA-5256" }
dotenv = "0.9.0"
fast-rpc = "0.3.0"
sapi = { git = "https://github.com/joyent/rust-triton-clients", tag = "v0.2.0" }
slog = { version = "2.4.1", features = [ "max_level_trace" ] }
slog-stdlog = "3"
slog-term = "2.4.0"
serde = "1.0"
serde_json = "1.0"
toml = "0.5"
utils = { path = "../utils" }
