[package]
name = "utils"
version = "0.3.0"
authors = ["Kelly McLaughlin <kelly.mclaughlin@joyent.com>",
           "bowrocker <jon.anderson@joyent.com>"]
edition = "2018"

[dependencies]
clap = "2.32"
cueball = "0.3.0"
cueball-manatee-primary-resolver = "0.3.0"
cueball-postgres-connection = "0.3.0"
itertools = "0.8.2"
num_cpus = { version = "1.8.0" }
slog = { version = "2.4.1", features = [ "max_level_trace" ] }
slog-stdlog = "3"
slog-term = "2.4.0"
serde = "1.0"
serde_derive = "1.0.84"
serde_json = "1.0"
string_template = "0.2.1"
toml = "0.5"
